# pomodoro_timer

./: .coveragerc  .gitignore  Dockerfile  README.md  app.py  commands.txt  docker-compose.yml  generate_tone.py  my_commands.md  pyproject.toml
scripts/: tone_generator.py
static/: script.js  style.css
static/css/: main.css  pomodoro.css
static/js/: config.js  main.js  pomodoroTimer.js  pomodoroUI.js  pomodoro_controller.js  pomodoro_model.js  pomodoro_timer_controller.js  pomodoro_timer_model.js  pomodoro_timer_ui.js  pomodoro_ui.js  pub_sub.js
templates/: index.html
